Modal Spacing issues

--- a/src/components/SkillsCard/Modal/Modal.css
+++ b/src/components/SkillsCard/Modal/Modal.css
@@ -61,7 +61,7 @@
   font-family: inherit;
   padding: 2rem;
   /* background-color: blue; */
-  height: 10rem;
+  height: 13rem;
   min-width: 90%;
   display: flex;
   align-items: center;
